# music_controller

./: .cursorrules  .gitignore  README.md  WyrmPlayerControl.spec  main.py  pyproject.toml  settings.json
.github/: copilot-instructions.md
scratch/: check_dpi.py  check_icon.py
src/: main.py
src/core/: config.py  display.py  hotkeys.py  logging_config.py  single_instance.py  state.py  websocket.py
src/core/utils/: keyboard.py
src/domain/: metadata_handler.py  protocols.py
src/infrastructure/: win32.py
src/services/: config_watcher.py  player_controller.py
src/ui/: hud.py  settings.py  tray.py
src/ui/components/settings/: general_tab.py  hotkeys_tab.py  layout_tab.py
tests/: conftest.py  test_config.py  test_keyboard_utils.py  test_metadata_handler.py  test_player_controller.py  test_state.py
