[project]
name = "music-controller"
version = "0.1.0"
description = "Advanced Music Controller leveraging WebSockets and direct keyboard input for high-performance audio management."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet>=0.84.0",
    "flet-desktop>=0.84.0",
    "keyboard>=0.13.5",
    "pillow>=12.2.0",
    "pystray>=0.19.5",
    "websockets>=16.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
]
